# geowind_era5

./: .gitignore  README.md  pyproject.toml
examples/: geowind_500hPa.ipynb  geowind_500hPa.py
geowind_era5/: __init__.py  cli.py  core.py
